--- a/src/stylesheets/vars.scss
+++ b/src/stylesheets/vars.scss
@@ -21,6 +21,7 @@
   --lime: #d1e892;
   --darkbrown: #746464;
   --darkbrown2: #8a5656;
+  --lightpink: #f5a5df;
 
   --uelen: #7ad9f8;
   --abash: #f3c75c;
