--- a/src/stylesheets/components/organisms.scss
+++ b/src/stylesheets/components/organisms.scss
@@ -163,6 +163,80 @@
 
 //
 //
+// Статьи и подборки
+
+.O_ArticleLead {
+  position: relative;
+  width: 100vw;
+  height: 490px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+
+  overflow: hidden;
+
+  &.black {
+    background-color: var(--black);
+  }
+
+  &.Uelen {
+    background-color: var(--uelen);
+  }
+
+  &.abash {
+    background-color: var(--abash);
+  }
+
+  &.green {
+    background-color: var(--green);
+  }
+
+  &.yellow {
+    background-color: var(--yellow);
+  }
+
+  &.blue {
+    background-color: var(--blue);
+  }
+
+  &.red {
+    background-color: var(--red);
+  }
+
+  &.pink {
+    background-color: var(--pink);
+  }
+
+  &.orange {
+    background-color: var(--orange);
+  }
+
+  &.lime {
+    background-color: var(--lime);
+  }
+
+  &.lila {
+    background-color: var(--lila);
+  }
+}
+
+.O_ArticleContent {
+  display: flex;
+  margin: 40px auto 200px;
+  flex-direction: column;
+  align-items: center;
+  gap: 45px;
+
+  .C_CraftAboutImages {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+}
+
+//
+//
 // Crafr — страницы отдельных ремёсел
 
 .O_CraftLead {
@@ -482,18 +556,35 @@
 //
 //
 //Start- стартовый экран
-.O_MainPageStart {
+.O_MainTeaser {
+  position: relative;
   display: flex;
+  width: 1176px;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  gap: 48px;
+
+  border-radius: 30px;
+
+  &.Matr {
+    margin: 90px auto 120px;
+    background: var(--lightpink);
+  }
+
+  &.MDPI {
+    margin: 130px auto 200px;
+    background: var(--green);
+  }
 }
 
-.O_MainPageCards {
+.O_MainMostPop {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 35px;
+  gap: 50px;
+
+  margin: 0 auto;
 
   .C_CraftsCards {
     display: flex;
@@ -503,65 +594,11 @@
     flex-direction: row;
     align-items: top;
 
-    max-width: 1350px;
+    max-width: 1180px;
 
-    grid-column-gap: 37px;
-    grid-row-gap: 37px;
+    grid-column-gap: 36px;
+    grid-row-gap: 64px;
   }
-}
-
-.O_MainPageSearch,
-.O_MainPageSubscribe {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 50px;
-}
-
-//
-.O_Select {
-  width: 940px;
-
-  .C_SelectOptionList {
-    display: none;
-    max-height: 200px;
-    overflow-y: scroll;
-
-    position: absolute;
-    z-index: 10;
-
-    border: 5px solid var(--black);
-    border-radius: 32px;
-    box-sizing: border-box;
-
-    // background-color: var(--lightgrey);
-  }
-
-  &.focus {
-    .C_SelectOptionList {
-      display: block;
-    }
-  }
-}
-
-//
-
-.O_MainPageTeaser {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 20px 0px 0px 50px;
-  gap: 39px;
-
-  width: 1320px;
-  height: 630px;
-
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-
-  background-image: url('images/Start/teaser.jpg');
 }
 
 //
